[package]
name = "ikconfig"
version = "0.1.7"
description = "A CLI utility to extract the .config file from a kernel image."
authors = ["Philip Ye <yestyle@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later OR MIT"
categories = ["command-line-utilities"]
keywords = ["Linux", "kernel", "config"]
repository = "https://github.com/yestyle/extract-ikconfig-rs"
homepage = "https://github.com/yestyle/extract-ikconfig-rs"
documentation = "https://github.com/yestyle/extract-ikconfig-rs"
readme = "README.md"
exclude = ["tests/data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
argh = "0.1.10"
bzip2 = "0.4.4"
flate2 = "1.0.24"
lz4_flex = { version = "0.10", default-features = false, features = ["checked-decode", "frame"] }
regex = "1.7.0"
rust-lzma = "0.5.1"
tempfile = "3.3.0"
zstd = "0.11.2"

[dev-dependencies]
assert_cmd = "2.0.6"
grep-matcher = "0.1.5"
grep-regex = "0.1.10"
grep-searcher = "0.1.10"
time = "0.3.17"
